@@ -13,7 +13,7 @@ from lib.params import get_sipdigestleak_args
 
 
 def main():
-    ip, host, rport, proto, domain, contact_domain, from_name, from_user, from_domain, to_name, to_user, to_domain, user_agent, localip, ofile, user, pwd, auth, verbose, sdp, sdes = get_sipdigestleak_args()
+    ip, host, rport, proto, domain, contact_domain, from_name, from_user, from_domain, to_name, to_user, to_domain, user_agent, localip, ofile, user, pwd, auth, verbose, sdp, sdes, file, ping = get_sipdigestleak_args()
 
     s = SipDigestLeak()
     s.ip = ip
@@ -37,6 +37,8 @@ def main():
     s.verbose = verbose
     s.sdp = sdp 
     s.sdes = sdes
+    s.file = file
+    s.ping = ping
 
     s.start()
 
